burst-8 background now correctly positioned behind profile pic

--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,7 @@ button {
   color:#f4f4f4;
 }
 
-#img.source-image {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+
 
 .green-color {
   color:green;
@@ -206,6 +201,7 @@ button {
   transform: rotate(20deg);
   border:rgb(217, 84, 79);
   border-radius: 5px;
+  border-color: transparent;
 }
 #burst-8:before {
   content: "";
@@ -219,16 +215,31 @@ button {
   border-radius: 5px;
   border-style: solid;
   border-width: 0 15px 15px 0;
-  border-color: transparent rgb(217, 84, 79) transparent transparent;
+  border-color: transparent;
 }
 
 .top-position{
   z-index: 99;
 }
 
-.under-profile-pic{
-  z-index: 98;
+.parent {
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
+.image1 {
+  position: absolute;
+  top: 36px;
+  left: 39px;
+}
 
-
+.image2 {
+  position: absolute;
+  top: 18px;
+  left: 40px;
+  border: 5px solid rgb(217, 84, 79);
+  text-align: center;
+  height: 85px;
+  width: 85px;
+}
